
[package]
name = "digital-sol-game"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.1.14"
num-traits = "0.2.14"
num-derive = "0.3.3"
borsh = "0.10.3"
web3-utils = { version = "0.2.4", features = ["devnet"] }
solana-system-interface = { version = "1", features = ["bincode"] }
thiserror = "2.0.17"

[features]
devnet = []
no-entrypoint = []

default = ["devnet"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib", "lib"]
